# BookRecommenderSystem

./: .gitignore  README.md  app.py  book_recommender.ipynb  main.py  popularity.pkl  pyproject.toml  requirements.txt
templates/: index.html  recommend.html
