[project]
name = "bookrecommnedersystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "waitress>=3.0.2",
]
